              b function names now match file names
              b lmap/display can now handle sparse lmaps as well
              * utils/tensorbasis now includes identity in the basis,
                state/bloch_vector and utils/bloch_state correspondingly
                changed to use the full correlation tensor
              * Control sequences package implemented in a more general way
                to match with the Dynamo optimal control package.
              * invariant/canonical output normalized more carefully
                to avoid a failing assert.

0.9.11      2013-07-26
              - state/normalization
              - lmap/subsref, not very useful
              + new physical constants
              + state/trace
              + utils/nullspace
              + utils/nullspace_hermitian
              + utils/liouvillian_fp
              + utils/orthonormalize
              + utils/tensorsum
              b state/subsref: works now
              * lmap/tensor, state/tensor: singleton handling...
              * lmap/display: scalars, labels, low-nnz lmaps
              * state/check: checks all properties before raising an error
              * state/prob: assume state ops are hermitian
              * utils/spectral_decomposition: sorting added
              * examples/nmr_sequences now accepts user-given seqs as well

0.9.12      in progress
              - state/is_ket
              + lmap/is_ket
              + lmap/conj
              + state/subsystems
              + utils/comm
              + utils/acomm
              + invariant/LU
              b utils/plot_adiabatic_evolution: eigs call now works for non-real matrices as well
              b state/negativity: extra sqrt removed
              * utils/lrmul simplified
              * renames:
                 state/seq_propagate    =>   seq/propagate
                 utils/liouvillian_fp   =>   utils/superop_fp
                 utils/plot_2q_corr     =>   utils/plot_correlation_simplex